tests/paczka1/small_fuzzy/14467326.err
Error in line 3: jJI7ot7H0 S906 8,7
Error in line 4: jJI7ot7H0 S985 40,9
